Fix for whitespace issues (#47)
* Fix for whitespace issues

* Fix for desktop CLS issue

--- a/blocks/booking/booking.css
+++ b/blocks/booking/booking.css
@@ -12297,6 +12297,11 @@ main .section.booking-container .booking-wrapper {
     box-shadow: 0 4px 8px #00000029;
 }
 
+.booking.search-flight a.button:any-link,
+.booking.search-flight button,  .booking.search-flight input{
+    margin: 0;
+}
+
 
 @media screen and (min-width: 767px) {
     main .section.booking-container .booking-wrapper { 
