--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -39,6 +39,7 @@ main .hero h2 {
   position: relative;
   transform: translateY(150%);
   z-index: 1;
+  margin: 0;
 }
 
 main .hero picture {
